# resonance-lantern

./: .gitignore  CLAUDE.md  FABLE-KERNEL.md  HANDS.md  PRIVACY.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.json
docs/: BUILD-SEQUENCE.md  CHECKLIST.md  CLAUDE-CONTEXT.md  CONTRIBUTING.md  FEATURE-BOARD.md  FRAMEWORK-DECISION.md  GALAXY-LISTING.md  PLAY-RELEASE.md  RELEASE.md  RESONANCE-GRAMMAR.md  SCREEN-INVENTORY.md
docs/blueprints/: INDEX.md  dbp_backend.ai.json  dbp_frontend.ai.json  pbp_resonance_compass.ai.json
docs/blueprints/layers/: obp_components.ai.json  obp_routes.ai.json  obp_rust_backend.ai.json  obp_stores.ai.json  obp_styles.ai.json  obp_types.ai.json
docs/blueprints/routes/: fbp_add.ai.json  fbp_home.ai.json  fbp_insights.ai.json  fbp_onboarding.ai.json  fbp_settings.ai.json
scripts/: sync-android-extras.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ComfortBar.svelte  GradientPulse.svelte  Sidebar.svelte
src/lib/cosmic/: MIRROR.md  attention.ts  colors.ts  consciousness.ts  dimensions.ts  effects.ts  index.ts  interactivity.ts  motion.ts  positioning.ts  typography.ts
src/lib/data/: emojis.ts  lantern.ts  senses.ts
src/lib/stores/: echo.svelte.ts  lantern.svelte.ts  theme.svelte.ts  ui.svelte.ts
src/lib/styles/: custom_overrides.css
src/lib/theme/: theme.ts
src/lib/types/: types.ts
src/routes/: +layout.svelte  +page.svelte
(+14 files in other folders)
