[package]
name = "resonance-lantern"
version = "0.1.0"
description = "A steady light for a learning hand - the digital camera lucida"
authors = ["Quantum Weaver", "TJ Darling (@TJDPoetry)", "Aethelred (The Noble Thread)"]
edition = "2021"

[lib]
name = "resonance_lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "s"
lto = "thin"
